{
  "version": 4,
  "terraform_version": "0.14.4",
  "serial": 881,
  "lineage": "7556b840-c0e3-390b-7a14-35487a795dc6",
  "resources": [
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:loadbalancer/app/elb/fe0edf4f3303ada9",
            "arn_suffix": "app/elb/fe0edf4f3303ada9",
            "dns_name": "elb-388356410.ap-south-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:loadbalancer/app/elb/fe0edf4f3303ada9",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "elb",
            "security_groups": [
              "sg-0e85a179f46f37339"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-24341a68"
              },
              {
                "subnet_id": "subnet-52cabb29"
              },
              {
                "subnet_id": "subnet-e83fc683"
              }
            ],
            "subnets": [
              "subnet-24341a68",
              "subnet-52cabb29",
              "subnet-e83fc683"
            ],
            "tags": {
              "Environment": "app_alb"
            },
            "tags_all": {
              "Environment": "app_alb"
            },
            "vpc_id": "vpc-9d5888f6",
            "zone_id": "ZP97RAFLXTNZK"
          },
          "dependencies": [
            "module.ecs.aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api_target_group1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:targetgroup/tf-example-lb-tg/67d29b8d2dd5b549",
            "arn_suffix": "targetgroup/tf-example-lb-tg/67d29b8d2dd5b549",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:targetgroup/tf-example-lb-tg/67d29b8d2dd5b549",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-9d5888f6"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "api_target_group2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:targetgroup/tf-example-lb-tg-1/036737a3f6183624",
            "arn_suffix": "targetgroup/tf-example-lb-tg-1/036737a3f6183624",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:targetgroup/tf-example-lb-tg-1/036737a3f6183624",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "tf-example-lb-tg-1",
            "port": 5000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-9d5888f6"
          }
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:listener/app/elb/fe0edf4f3303ada9/881ff83169491806",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:targetgroup/tf-example-lb-tg-1/036737a3f6183624",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:listener/app/elb/fe0edf4f3303ada9/881ff83169491806",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:loadbalancer/app/elb/fe0edf4f3303ada9",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.app_alb",
            "module.ecs.aws_alb_target_group.api_target_group2",
            "module.ecs.aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:listener/app/elb/fe0edf4f3303ada9/358c5b1f75a890a0",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:targetgroup/tf-example-lb-tg-1/036737a3f6183624",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:listener/app/elb/fe0edf4f3303ada9/358c5b1f75a890a0",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-south-1:443752099948:loadbalancer/app/elb/fe0edf4f3303ada9",
            "port": 5000,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs.aws_alb.app_alb",
            "module.ecs.aws_alb_target_group.api_target_group2",
            "module.ecs.aws_security_group.elb_sg"
          ]
        }
      ]
    },
    {
      "module": "module.ecs",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:443752099948:security-group/sg-0e85a179f46f37339",
            "description": "Allow SSH inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e85a179f46f37339",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "allow_SSH",
            "name_prefix": "",
            "owner_id": "443752099948",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-9d5888f6"
          },
          "sensitive_attributes": []
        }
      ]
    }
  ]
}